--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,9 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BobOmbBehaviour.cs" />
      <Compile Include="Assets\PlayerController.cs" />
-     <Compile Include="Assets\scMarioController.cs" />
-     <Compile Include="Assets\scPCController.cs" />
+     <Compile Include="Assets\script.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
