--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,13 +48,12 @@
   <ItemGroup>
      <Compile Include="Assets\Attack1.cs" />
      <Compile Include="Assets\BobOmbBehaviour.cs" />
+     <Compile Include="Assets\Chef\PCInfo.cs" />
      <Compile Include="Assets\Chef\PlayerController.cs" />
      <Compile Include="Assets\CupCakeAI.cs" />
      <Compile Include="Assets\HUD.cs" />
      <Compile Include="Assets\ProCore\Prototype\Scripts\RebuildMeshOnWake.cs" />
-     <Compile Include="Assets\enemyHealth.cs" />
-     <Compile Include="Assets\scMarioController.cs" />
-     <Compile Include="Assets\scPCController.cs" />
+     <Compile Include="Assets\enemyInfo.cs" />
      <None Include="Assets\ProCore\Prototype\About\changelog.txt" />
      <None Include="Assets\ProCore\Prototype\Shader\VertexBillboard.shader" />
      <None Include="Assets\ProCore\Prototype\Shader\DiffuseVertexColor.shader" />
